--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: ieft
-      MYSQL_USER: ieft
-      MYSQL_PASSWORD: ieft
+      MYSQL_DATABASE: database
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
     volumes:
           - "./docker/mysql/database:/var/lib/mysql"
   apache:
@@ -38,8 +38,8 @@ services:
       environment:
        - PMA_ARBITRARY=1
        - PMA_HOSTS=mysql
-       - PMA_USER=ieft
-       - PMA_PASSWORD=ieft
+       - PMA_USER=root
+       - PMA_PASSWORD=root
       restart: always
       ports:
        - 8080:80
