--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
 version: '2'
 services:
   memcached:
-    image: memcached:latest
+      image: memcached:latest
 
   mysql:
-    build: mysql/
+    image: treenity/mysql
     container_name: mysql
     restart: always
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: database
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
     volumes:
-          - "./docker/mysql/database:/var/lib/mysql"
+      - "./docker/mysql/database:/var/lib/mysql"
+
   apache:
-    build: apache/
+    image: treenity/apache
     container_name: apache
     restart: always
     depends_on:
@@ -31,17 +32,18 @@ services:
       - "./:/var/www/html"
     environment:
       XDEBUG_CONFIG: "remote_host=192.168.43.23"
-      PHP_IDE_CONFIG: "serverName=192.168.99.100"
+      PHP_IDE_CONFIG: "serverName=dev.lacrespina.com"
+
   phpmyadmin:
-      image: phpmyadmin/phpmyadmin
-      container_name: phpmyadmin
-      environment:
-       - PMA_ARBITRARY=1
-       - PMA_HOSTS=mysql
-       - PMA_USER=root
-       - PMA_PASSWORD=root
-      restart: always
-      ports:
-       - 8080:80
-      volumes:
-       - "/sessions"
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOSTS=mysql
+      - PMA_USER=root
+      - PMA_PASSWORD=root
+    restart: always
+    ports:
+      - 8080:80
+    volumes:
+      - "/sessions"
