--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get update && \
 
 # For mcrypt
 
-		libmcrypt-dev \
+		php5-mcrypt \
 
 # For memcached
 
@@ -71,6 +71,7 @@ RUN apt-get update && \
 		zip \
 	&& \
 
+RUN php5enmod mcrypt
 # Some extensions need to be installed via PECL
 
 	pecl install apcu-4.0.8 memcached && \
