--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_DATABASE: database
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
     volumes:
       - "./docker/mysql/database:/var/lib/mysql"
 
-  apache:
-    image: treenity/apache
-    container_name: apache
+  nginx:
+    image: treenity/nginx
+    container_name: nginx
     restart: always
     depends_on:
       - mysql
@@ -29,7 +29,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - "./:/var/www/html"
+          - "./:/usr/share/nginx/html"
     environment:
       XDEBUG_CONFIG: "remote_host={{YOUR_LOCAL_IP]]"
       PHP_IDE_CONFIG: "serverName={{DOCKER_HOST_IP}}"
@@ -40,8 +40,8 @@ services:
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOSTS=mysql
-      - PMA_USER=root
-      - PMA_PASSWORD=root
+      - PMA_USER=user
+      - PMA_PASSWORD=pass
     restart: always
     ports:
       - 8080:80
