--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,22 @@ services:
     depends_on:
       - mysql
     links:
+      - fpm
       - mysql
       - memcached:memcached
     ports:
       - "80:80"
     volumes:
-          - "./:/usr/share/nginx/html"
+          - "./:/var/www/html"
     environment:
       XDEBUG_CONFIG: "remote_host={{YOUR_LOCAL_IP]]"
       PHP_IDE_CONFIG: "serverName={{DOCKER_HOST_IP}}"
-
+  fpm:
+      image: php:fpm
+      ports:
+          - ":9000"
+      volumes_from:
+          - nginx
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
