Revert Update PHP copy

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:latest
 MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
-RUN ADD ./default.conf /etc/nginx/conf.d/
+COPY ./default.conf /etc/nginx/conf.d/
 
 VOLUME /var/www/html
 
