--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,20 @@
 server {
-    listen  80;
+    listen   80;
 
-    # this path MUST be exactly as docker-compose.fpm.volumes,
-    # even if it doesn't exists in this dock.
-    root /var/www/html;
+    root /var/www;
+    index index.php index.html index.htm;
+
+    # Make site accessible from http://localhost/
+    server_name localhost;
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        autoindex  on;
     }
 
-    location ~ ^/.+\.php(/|$) {
-        fastcgi_pass fpm:9000;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    location ~* \.PHP$ {
+        fastcgi_index   index.php;
+        fastcgi_pass    fpm:9000;
+        include         fastcgi_params;
+        fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
     }
 }
