--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen   80;
 
-    root /var/www;
+    root /usr/share/nginx/html;
     index index.php index.html index.htm;
 
     # Make site accessible from http://localhost/
