--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,5 +1,9 @@
 FROM mysql:5.7
 
+RUN sed -i -e 's/^bind-address/#bind-address/' /etc/mysql/my.cnf
+
+RUN sed -i -e 's/^max_allowed_packet.*/max_allowed_packet = 1073741824/' /etc/mysql/my.cnf
+
 RUN usermod -u 1000 mysql
 RUN mkdir -p /var/run/mysqld
 RUN chmod -R 777 /var/run/mysqld
