--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -2,7 +2,7 @@ FROM mysql:5.7
 
 RUN sed -i -e 's/^bind-address/#bind-address/' /etc/mysql/my.cnf
 
-RUN sed -i -e 's/^max_allowed_packet.*/max_allowed_packet = 512M/' /etc/mysql/my.cnf
+RUN sed -i -e 's/^max_allowed_packet.*/max_allowed_packet = 1073741824/' /etc/mysql/my.cnf
 
 RUN usermod -u 1000 mysql
 RUN mkdir -p /var/run/mysqld
