--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -93,7 +93,7 @@ RUN touch /usr/local/etc/php/conf.d/php.ini \
 # xdebug
 RUN yes | pecl install xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
-    && echo "xdebug.default_enable = 0">> /usr/local/etc/php/conf.d/xdebug.ini
+    && echo "xdebug.default_enable = 0">> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable= 1" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart= 0" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_connect_back = 0" >> /usr/local/etc/php/conf.d/xdebug.ini \
