--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,3 @@
-# --- + STATIC + ---
-
-# Template variables:
-#
-# * domain = local.dev
-# * name = local
-# * type = static
-# * dir =
-
 server {
     listen 80;
 
@@ -19,13 +10,26 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
+    
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+    
+    sendfile off;
+    
+    client_max_body_size 100m;
 
     location ~* \.PHP$ {
         fastcgi_index   index.php;
         fastcgi_pass    php:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include         fastcgi_params;
         fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
+    }
+    
+    location ~ /\.ht {
+        deny all;
     }
 }
-
-# --- - STATIC - ---
