--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     root /var/www/html;
-    index index.php;
+    index index.html index.php;
 
     error_log /dev/stdout debug;
     access_log /dev/stdout;
