Add php-fpm conf

--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -17,19 +17,20 @@ RUN apt-get update && apt-get upgrade -y && apt-get install -y \
         libzzip-dev \
         sendmail \
         && apt-get autoremove -y && apt-get autoclean -y
-        
+
+COPY ./www.conf /etc/php5/fpm/pool.d/www.conf
+
 RUN useradd docker -d /var/www/html -p null -s /bin/bash -g sudo \
     && echo "docker:docker" | chpasswd
-    
+
 RUN docker-php-ext-install intl mcrypt mbstring mysql mysqli pdo_mysql ftp sockets xmlrpc zip \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd && docker-php-ext-install pdo_pgsql
-    
-# Install 
+
+# Install
 RUN pecl install apcu
 RUN echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
 
-    
 RUN touch /usr/local/etc/php/conf.d/php.ini \
     && echo "memory_limit  = 1024M" >> /usr/local/etc/php/conf.d/php.ini \
     && echo "upload_max_filesize = 1024M" >> /usr/local/etc/php/conf.d/php.ini \
@@ -37,13 +38,13 @@ RUN touch /usr/local/etc/php/conf.d/php.ini \
     && echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/php.ini \
     && echo "display_errors = On" >> /usr/local/etc/php/conf.d/php.ini \
     && echo "date.timezone = Europe/Paris" >> /usr/local/etc/php/conf.d/php.ini
-    
+
 RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
     && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
     && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
     && mv /tmp/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
     && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini
-    
+
 RUN pecl install xdebug \
     && touch $PHP_INI_DIR/conf.d/xdebug.ini \
     && echo 'zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/xdebug.so' >> $PHP_INI_DIR/conf.d/xdebug.ini \
@@ -53,7 +54,7 @@ RUN pecl install xdebug \
 #    && echo 'xdebug.var_display_max_depth=10' >> $PHP_INI_DIR/conf.d/xdebug.ini \
 #    && echo 'xdebug.cli_color=1' >> $PHP_INI_DIR/conf.d/xdebug.ini \
 #    && echo 'xdebug.show_local_vars=1' >> $PHP_INI_DIR/conf.d/xdebug.ini
-    
+
 #RUN docker-php-ext-install opcache
 #   && touch $PHP_INI_DIR/conf.d/opcache.ini \
 #   && echo 'zend_extension=opcache.so' >> $PHP_INI_DIR/conf.d/opcache.ini \
