--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -37,7 +37,7 @@ RUN touch /usr/local/etc/php/conf.d/php.ini \
     && echo "post_max_size = 1024M" >> /usr/local/etc/php/conf.d/php.ini \
     && echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/php.ini \
     && echo "display_errors = On" >> /usr/local/etc/php/conf.d/php.ini \
-    && echo "date.timezone = Europe/Paris" >> /usr/local/etc/php/conf.d/php.ini
+    && echo "date.timezone = UTC" >> /usr/local/etc/php/conf.d/php.ini
 
 RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
     && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
