--- a/fpm/5.6/www.conf
+++ b/fpm/5.6/www.conf
@@ -1,6 +1,6 @@
-; Start a new pool named 'symfony'.
+; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
-; pool name ('symfony' here)
+; pool name ('www' here)
 [www]
 
 ; Unix user/group of processes
