Fix wrong equal

--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -3,10 +3,10 @@ MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
 # ENV can be set from compose
 ARG XDEBUG_ENABLE=0
-ENV XDEBUG_ENABLE=${XDEBUG_ENABLE}
+ENV XDEBUG_ENABLE ${XDEBUG_ENABLE}
 
 ARG OPCACHE_ENABLE=0
-ENV OPCACHE_ENABLE=${OPCACHE_ENABLE}
+ENV OPCACHE_ENABLE ${OPCACHE_ENABLE}
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y \
         sudo \
