--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -62,6 +62,8 @@ RUN pecl install xdebug \
     && echo 'xdebug.remote_connect_back="1"' >> $PHP_INI_DIR/conf.d/xdebug.ini \
     && echo 'xdebug.var_display_max_depth="10"' >> $PHP_INI_DIR/conf.d/xdebug.ini \
     && echo 'xdebug.cli_color="1"' >> $PHP_INI_DIR/conf.d/xdebug.ini \
+    && echo 'xdebug.remote_handler="dbgp"' >> $PHP_INI_DIR/conf.d/xdebug.ini \
+    && echo 'xdebug.remote_port="9001"' >> $PHP_INI_DIR/conf.d/xdebug.ini \
     && echo 'xdebug.show_local_vars="1"' >> $PHP_INI_DIR/conf.d/xdebug.ini
 
 #RUN docker-php-ext-install opcache
