--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    root /var/www/html;
+    root /app;
     index index.html index.php;
 
     error_log /dev/stdout debug;
