--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         MYSQL_PASSWORD: wordpress
         MYSQL_ROOT_PASSWORD: root
       volumes:
-        - "./docker/database:/var/lib/mysql"
+        - "./.docker/database:/var/lib/mysql"
       ports:
         - 3306:3306
 
@@ -35,7 +35,7 @@ services:
       ports:
         - "80:80"
       volumes:
-        - "./:/var/www/html"
+        - "./:/app"
 
   phpmyadmin:
       image: phpmyadmin/phpmyadmin
