--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,8 @@
+worker_processes auto;
+events {
+  worker_connections 512;       # set the max number of simultaneous connections (per worker process)
+}
+
 server {
     listen 80;
 
@@ -10,12 +15,12 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
-    
+
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
-    
+
     sendfile off;
-    
+
     client_max_body_size 100m;
 
     location ~* \.PHP$ {
@@ -28,7 +33,7 @@ server {
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
     }
-    
+
     location ~ /\.ht {
         deny all;
     }
