--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,6 +14,9 @@ server {
     error_log /dev/stdout debug;
     access_log /dev/stdout;
 
+    gzip_types text/plain text/css application/json application/x-javascript
+                   text/xml application/xml application/xml+rss text/javascript;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
