--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,45 +1,67 @@
-worker_processes auto;
+
+daemon off;
+
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+
 events {
-  worker_connections 512;       # set the max number of simultaneous connections (per worker process)
+    worker_connections  1024;
 }
 
-server {
-    listen 80;
 
-    server_name _;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    root /app;
-    index index.html index.php;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    error_log /dev/stdout debug;
-    access_log /dev/stdout;
+    access_log  /var/log/nginx/access.log  main;
 
-    gzip_types text/plain text/css application/json application/x-javascript
-                   text/xml application/xml application/xml+rss text/javascript;
+    sendfile        on;
+    #tcp_nopush     on;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+
+        #error_page  404              /404.html;
+
+        # redirect server error pages to the static page /50x.html
+        #
+        #error_page   500 502 503 504  /50x.html;
+        #location = /50x.html {
+        #    root   /usr/share/nginx/html;
+        #}
+
+        # Pass PHP scripts to PHP-FPM
+        location ~* \.php$ {
+            fastcgi_index   index.php;
+            fastcgi_pass    php:9000;
+            #fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
+            include         fastcgi_params;
+            fastcgi_param   SCRIPT_FILENAME    /srv/http$fastcgi_script_name;
+            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
+        }
+        # deny access to .htaccess files, if Apache's document root
+        # concurs with nginx's one
+        location ~ /\.ht {
+            deny  all;
+        }
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    sendfile off;
-
-    client_max_body_size 100m;
-
-    location ~* \.PHP$ {
-        fastcgi_index   index.php;
-        fastcgi_pass    php:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        include         fastcgi_params;
-        fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-        fastcgi_intercept_errors off;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
-    }
-
-    location ~ /\.ht {
-        deny all;
-    }
 }
