--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -45,7 +45,7 @@ RUN touch /usr/local/etc/php/conf.d/php.ini \
     && echo 'error_reporting = E_ALL' >> /usr/local/etc/php/conf.d/php.ini \
     && echo 'display_errors = On' >> /usr/local/etc/php/conf.d/php.ini \
     && echo 'date.timezone = UTC' >> /usr/local/etc/php/conf.d/php.ini \
-    && echo 'max_input_vars = 3000' >> /usr/local/etc/php/conf.d/php.ini
+    && echo 'max_input_vars = 3000' >> /usr/local/etc/php/conf.d/php.ini \
     && echo 'max_execution_time = 1800' >> /usr/local/etc/php/conf.d/php.ini
 
 # Install BlackFire
