--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -5,9 +5,6 @@ MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 ARG XDEBUG_ENABLE=0
 ENV XDEBUG_ENABLE ${XDEBUG_ENABLE}
 
-ARG OPCACHE_ENABLE=0
-ENV OPCACHE_ENABLE ${OPCACHE_ENABLE}
-
 RUN apt-get update && apt-get upgrade -y && apt-get install -y \
         sudo \
         openssh-server \
@@ -59,7 +56,8 @@ RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
 RUN yes | pecl install xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=${XDEBUG_ENABLE}" >> /usr/local/etc/php/conf.d/xdebug.ini \
-    && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini
+    && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_connect_back=off" >> /usr/local/etc/php/conf.d/xdebug.ini
 
 # Install OPCACHE
 RUN docker-php-ext-install opcache
