--- a/fpm/5.6/www.conf
+++ b/fpm/5.6/www.conf
@@ -1,13 +1,13 @@
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
-[www]
+[docker]
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-;user = nobody
-;group = nobody
+user = docker
+group = docker
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
