--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,19 +1,25 @@
 server {
-    listen 80;
+    listen 80 default;
 
-    #server_name localhost;
+    client_max_body_size 108M;
+
+    server_name local.dev;
 
     root /var/www/html;
-
-    client_max_body_size 100m;
 
     index index.html index.php;
 
     error_log /dev/stdout debug;
     access_log /dev/stdout;
 
+    gzip on;
+    gzip_min_length  1100;
+    gzip_buffers  4 32k;
+
     gzip_types text/plain text/css application/json application/x-javascript
                    text/xml application/xml application/xml+rss text/javascript;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -23,19 +29,19 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~* \.PHP$ {
-        fastcgi_index   index.php;
-        fastcgi_pass    php:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        include         fastcgi_params;
-        fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-        #proxy_set_header   Host $host;
-        #proxy_set_header   X-Real-IP $remote_addr;
-        #proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        #proxy_set_header   X-Forwarded-Host $server_name;
+        fastcgi_pass php-fpm:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/errors.log";
         fastcgi_intercept_errors off;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        include fastcgi_params;
     }
+
+    #location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    #    expires 14d;
+    #}
 
     location ~ /\.ht {
         deny all;
