--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:latest
+FROM phpdockerio/nginx:latest
 MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
 RUN rm /etc/nginx/conf.d/default.conf
