--- a/fpm/5.6/Dockerfile
+++ b/fpm/5.6/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get update \
 
 COPY ./php-ini-overrides.ini /etc/php5/fpm/conf.d/99-overrides.ini
 
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
 RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
     && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
     && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
