Fix 404 & index.php problems

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,56 +34,59 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen   80; ## listen for ipv4; this line is default and implied
-        listen   [::]:80 default ipv6only=on; ## listen for ipv6
+    	listen   80; ## listen for ipv4; this line is default and implied
+    	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-        send_timeout 20;
+    	send_timeout 20;
 
-        sendfile off;
+    	sendfile off;
 
-        charset UTF-8;
+    	charset UTF-8;
 
-        root /var/www/html;
+    	root /var/www/html;
 
-        error_log /dev/stdout info;
-        access_log /dev/stdout;
+    	error_log /dev/stdout info;
+    	access_log /dev/stdout;
 
-        error_page 404 404.html;
-        error_page 500 502 503 504 /50x.html;
+    	error_page 404 /404.html;
+    	error_page 500 502 503 504 /50x.html;
 
-        location = 404.html {
-            root   /usr/local/nginx/html/;
-        }
+    	location = /404.html {
+    		root   /usr/local/nginx/html;
+    		internal;
+    	}
 
-        location = /50x.html {
-            root   /usr/local/nginx/html/;
-        }
+    	location = /50x.html {
+    		root   /usr/local/nginx/html;
+    		internal;
+    	}
 
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location = /robots.txt  { allow all; access_log off; log_not_found off; }
+    	location = /favicon.ico { access_log off; log_not_found off; }
+    	location = /robots.txt  { allow all; access_log off; log_not_found off; }
 
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-            expires 14d;
-        }
+    	location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    		expires 14d;
+    	}
 
-        location ~ /\. {
-            log_not_found off;
-            deny all;
-        }
+    	location ~ /\. {
+    		log_not_found off;
+    		deny all;
+    	}
 
-        location / {
-            try_files $uri $uri/index.html /index.php?$query_string;
-        }
+    	location / {
+			try_files $uri $uri/ $uri.php;
+    	}
 
-        location ~* \.php$ {
-            include fastcgi_params;
-            fastcgi_pass php-fpm:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO         $fastcgi_path_info;
-            fastcgi_param SERVER_NAME       $host;
-            fastcgi_intercept_errors on;
-        }
-        include /var/www/html/*.conf;
+    	location ~ \.php$ {
+    		try_files $uri =404;
+    		include fastcgi_params;
+    		fastcgi_pass php-fpm:9000;
+    		fastcgi_index index.php;
+    		fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+    		fastcgi_param PATH_INFO         $fastcgi_path_info;
+    		fastcgi_param SERVER_NAME       $host;
+    		fastcgi_intercept_errors on;
+    	}
+    	include /var/www/html/*.conf;
     }
 }
